// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`edit screen on press test navigate to edit inventory on Edit button pressed 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#ffffff",
        "borderColor": "#f2f4f7",
        "borderRadius": 12,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "column",
        "height": 110,
        "marginBottom": 12,
        "marginLeft": 20,
        "marginRight": 20,
        "paddingBottom": 20,
        "paddingLeft": 20,
        "paddingRight": 20,
        "paddingTop": 20,
        "width": "90%",
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "color": "#131316",
          "fontSize": 18,
          "fontWeight": "700",
          "marginBottom": 4,
        },
      ]
    }
  />
  <Text
    style={
      [
        {
          "color": "#3a3a44",
          "fontSize": 14,
          "marginBottom": 4,
        },
      ]
    }
  >
    #
    300
  </Text>
  <Text
    style={
      [
        {
          "color": "#3a3a44",
          "fontSize": 14,
        },
      ]
    }
  >
    2
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "height": 40,
        "opacity": 1,
        "position": "absolute",
        "right": 20,
        "top": 20,
        "width": 40,
      }
    }
    testID="edit"
  >
    <Text
      style={
        [
          {
            "color": "#aa77ff",
            "fontSize": 14,
          },
        ]
      }
    >
      Edit
    </Text>
  </View>
</View>
`;

exports[`render screens correctly should render create inventory correctly 1`] = `
<RCTSafeAreaView
  style={
    [
      {
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
      },
    ]
  }
>
  <RCTScrollView
    style={
      [
        {
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "marginBottom": 30,
          "paddingLeft": 20,
          "paddingRight": 20,
        },
      ]
    }
  >
    <View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "marginBottom": 20,
              "marginTop": 10,
            },
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#aa77ff",
              "borderRadius": 12,
              "height": 40,
              "justifyContent": "center",
              "marginRight": 20,
              "opacity": 1,
              "width": 40,
            }
          }
        >
          <Text
            style={
              [
                {
                  "color": "#ffffff",
                  "fontSize": 24,
                },
              ]
            }
          >
            &lt;
          </Text>
        </View>
        <Text
          style={
            [
              {
                "fontSize": 24,
                "fontWeight": "700",
              },
            ]
          }
        >
          Create
           Inventory
        </Text>
      </View>
      <TextInput
        keyboardType="default"
        onChangeText={[Function]}
        placeholder="Inventory Name"
        secureTextEntry={false}
        style={
          [
            {
              "backgroundColor": "#ffffff",
              "borderColor": "black",
              "borderRadius": 12,
              "borderWidth": 1,
              "height": 44,
              "marginBottom": 12,
              "paddingBottom": 10,
              "paddingLeft": 10,
              "paddingRight": 10,
              "paddingTop": 10,
              "width": "100%",
            },
          ]
        }
        value=""
      />
      <TextInput
        keyboardType="numeric"
        onChangeText={[Function]}
        placeholder="Inventory Total Stock"
        secureTextEntry={false}
        style={
          [
            {
              "backgroundColor": "#ffffff",
              "borderColor": "black",
              "borderRadius": 12,
              "borderWidth": 1,
              "height": 44,
              "marginBottom": 12,
              "paddingBottom": 10,
              "paddingLeft": 10,
              "paddingRight": 10,
              "paddingTop": 10,
              "width": "100%",
            },
          ]
        }
        value=""
      />
      <TextInput
        keyboardType="numeric"
        onChangeText={[Function]}
        placeholder="Inventory Price"
        secureTextEntry={false}
        style={
          [
            {
              "backgroundColor": "#ffffff",
              "borderColor": "black",
              "borderRadius": 12,
              "borderWidth": 1,
              "height": 44,
              "marginBottom": 12,
              "paddingBottom": 10,
              "paddingLeft": 10,
              "paddingRight": 10,
              "paddingTop": 10,
              "width": "100%",
            },
          ]
        }
        value=""
      />
      <TextInput
        keyboardType="default"
        onChangeText={[Function]}
        placeholder="Inventory Description"
        secureTextEntry={false}
        style={
          [
            {
              "backgroundColor": "#ffffff",
              "borderColor": "black",
              "borderRadius": 12,
              "borderWidth": 1,
              "height": 44,
              "marginBottom": 12,
              "paddingBottom": 10,
              "paddingLeft": 10,
              "paddingRight": 10,
              "paddingTop": 10,
              "width": "100%",
            },
          ]
        }
        value=""
      />
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#aa77ff",
            "borderRadius": 12,
            "marginTop": 20,
            "opacity": 1,
            "paddingBottom": 12,
            "paddingLeft": 20,
            "paddingRight": 20,
            "paddingTop": 12,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#ffffff",
                "fontSize": 24,
                "fontWeight": "700",
                "textAlign": "center",
              },
            ]
          }
        >
          Create
        </Text>
      </View>
    </View>
  </RCTScrollView>
</RCTSafeAreaView>
`;

exports[`render screens correctly should render home correctly 1`] = `
<RCTSafeAreaView
  style={
    [
      {
        "display": "flex",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "flex-end",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "marginBottom": 10,
          "marginLeft": 0,
          "marginRight": 20,
          "marginTop": 0,
        },
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#aa77ff",
          "borderRadius": 12,
          "marginTop": 20,
          "opacity": 1,
          "paddingBottom": 12,
          "paddingLeft": 15,
          "paddingRight": 15,
          "paddingTop": 12,
          "width": 100,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#ffffff",
              "fontSize": 18,
              "fontWeight": "700",
              "textAlign": "center",
            },
          ]
        }
      >
        Create
      </Text>
    </View>
  </View>
  <View
    style={
      [
        {
          "height": "60%",
          "justifyContent": "center",
          "paddingLeft": 20,
          "paddingRight": 20,
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#000000",
            "fontSize": 24,
            "textAlign": "center",
          },
        ]
      }
    >
      Inventory is Empty
    </Text>
    <Text
      style={
        [
          {
            "color": "#212121",
            "fontSize": 16,
            "marginTop": 20,
            "textAlign": "center",
          },
        ]
      }
    >
      Add an Inventory by clicking on the create button above
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
          "marginBottom": 10,
        },
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#ffffff",
          "borderColor": "#aa77ff",
          "borderRadius": 12,
          "borderWidth": 1,
          "marginTop": 20,
          "opacity": 1,
          "paddingBottom": 12,
          "paddingLeft": 20,
          "paddingRight": 20,
          "paddingTop": 12,
          "width": "80%",
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#aa77ff",
              "fontSize": 24,
              "fontWeight": "700",
              "textAlign": "center",
            },
          ]
        }
      >
        Logout
      </Text>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`render screens correctly should render login correctly 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#ffffff",
        "display": "flex",
        "flexBasis": 0,
        "flexDirection": "column",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
        "paddingLeft": 40,
        "paddingRight": 40,
      },
    ]
  }
>
  <TextInput
    keyboardType="default"
    onChangeText={[Function]}
    placeholder="Email"
    secureTextEntry={false}
    style={
      [
        {
          "backgroundColor": "#ffffff",
          "borderColor": "black",
          "borderRadius": 12,
          "borderWidth": 1,
          "height": 44,
          "marginBottom": 12,
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
          "width": "100%",
        },
      ]
    }
    value=""
  />
  <TextInput
    keyboardType="default"
    onChangeText={[Function]}
    placeholder="Password"
    secureTextEntry={true}
    style={
      [
        {
          "backgroundColor": "#ffffff",
          "borderColor": "black",
          "borderRadius": 12,
          "borderWidth": 1,
          "height": 44,
          "marginBottom": 12,
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
          "width": "100%",
        },
      ]
    }
    value=""
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#aa77ff",
        "borderRadius": 12,
        "marginTop": 20,
        "opacity": 1,
        "paddingBottom": 12,
        "paddingLeft": 20,
        "paddingRight": 20,
        "paddingTop": 12,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#ffffff",
            "fontSize": 24,
            "fontWeight": "700",
            "textAlign": "center",
          },
        ]
      }
    >
      Login
    </Text>
  </View>
</View>
`;

exports[`render screens correctly should render splash screen correctly 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#aa77ff",
        "flexBasis": 0,
        "flexDirection": "column",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "color": "#ffffff",
          "fontSize": 32,
          "fontWeight": "700",
          "textAlign": "center",
        },
      ]
    }
  >
    Inventory
  </Text>
</View>
`;
